feat: make thumbnail gone

--- a/src/contentscript/contentscript.scss
+++ b/src/contentscript/contentscript.scss
@@ -1,4 +1,10 @@
 div {
-  color: blue;
-  background: pink;
+  color: white;
+  background: black;
+}
+img.boxart-image  {
+  display: none;
+}
+.boxart-container {
+  border: 1px solid white;
 }
